[package]
name = "apply-user-defaults"
version = "0.1.1"
authors = ["Michael Sanders <michael.sanders@fastmail.com>"]
description = "A small utility to set macOS user defaults declaratively from a YAML file."
repository = "https://github.com/zero-sh/apply-user-defaults"
readme = "README.md"
license = "MIT OR Apache-2.0"
build = "build.rs"
edition = "2018"
keywords = ["macos", "user", "defaults", "declarative", "yaml"]
categories = [
    "command-line-utilities",
    "config",
    "os::macos-apis",
]


[dependencies]
colored = "1.9"
lazy_static = "1.4"
regex = "1.3"
yaml-rust = "0.4"

[dev-dependencies]
assert_cli = "0.6"

[dependencies.clap]
version = "2.33"
default-features = false
features = ["color", "suggestions"]

[build-dependencies.clap]
version = "2.33"
default-features = false
features = ["color", "suggestions"]
